# fagun

./: .gitignore  .mcp.json  LANDING_PROMPT.md  LICENSE  README.md  install.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: docs.html  index.html  local-report.html
examples/: autoqa-smoke.md
skills/fagun/: SKILL.md
src/fagun/: __init__.py  __main__.py  a11y.py  advsec.py  api_mapper.py  autoqa.py  browser.py  chrome_bridge.py  fingerprint.py  format.py  forms.py  healing.py  install.py  interactive.py  qa.py  readiness.py  report.py  scope.py  security.py  security_toolkit.py  server.py  session.py  style.py  testdata.py  uat.py  vitals.py
src/fagun/data/: skill.md
tests/: test_browser.py  test_install.py  test_uat.py  test_units.py
tests/fixtures/: bad.html
