[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fagun"
version = "0.11.0"
description = "Fagun — one MCP server that lets any AI tool (Claude, Cursor, Codex, Antigravity, Windsurf) use a site as real end users, run full UAT, hunt bugs, and give a product-readiness verdict."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mejbaur Bahar Fagun", email = "mejbaur@markopolo.ai" }]
keywords = ["mcp", "browser", "qa", "testing", "playwright", "ai", "claude", "cursor", "codex"]

dependencies = [
    "mcp>=1.2.0",
    "playwright>=1.44.0",
]

[project.scripts]
fagun = "fagun.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://github.com/mejbaurbahar/fagun"
Documentation = "https://mejbaurbahar.github.io/fagun/"
Repository = "https://github.com/mejbaurbahar/fagun"
Issues = "https://github.com/mejbaurbahar/fagun/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fagun"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"
